# madevil

./: .gitignore  CMakeLists.txt  README.md  index.html  web.sh  windows.sh
assets/: map.tmx  map.txt
src/: enemy.cpp  enemy.hpp  font.hpp  fx.cpp  fx.hpp  game.cpp  game.hpp  hero.cpp  hero.hpp  main.cpp  math.hpp
